site/docs/4.2.0/api/python/_sources/reference/pyspark.sql/api/pyspark.sql.types.StringType.rst.txt
..  Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

..    http://www.apache.org/licenses/LICENSE-2.0

..  Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.


StringType
============================

.. currentmodule:: pyspark.sql.types

.. autoclass:: StringType

    
      
    

    
    

    .. rubric:: Methods

    .. autosummary::
    
       ~StringType.collationProvider
       ~StringType.fromDDL
       ~StringType.fromInternal
       ~StringType.isUTF8BinaryCollation
       ~StringType.json
       ~StringType.jsonValue
       ~StringType.needConversion
       ~StringType.simpleString
       ~StringType.toInternal
       ~StringType.typeName

    
    

    
    

    .. rubric:: Attributes

    .. autosummary::
    
        
           ~StringType.providerICU
        
        
           ~StringType.providerSpark
        
        
           ~StringType.providers
        

    
    

    
    

    .. rubric:: Methods Documentation

    
    .. automethod:: collationProvider
    .. automethod:: fromDDL
    .. automethod:: fromInternal
    .. automethod:: isUTF8BinaryCollation
    .. automethod:: json
    .. automethod:: jsonValue
    .. automethod:: needConversion
    .. automethod:: simpleString
    .. automethod:: toInternal
    .. automethod:: typeName

    
    

    
    

    .. rubric:: Attributes Documentation

    
    .. autoattribute:: providerICU
    .. autoattribute:: providerSpark
    .. autoattribute:: providers

    
    
